--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div id="stories-loading-msg">Loading&hellip;</div>
 
   <!-- List of all stories -->
-  <ol id="all-stories-list" class="stories-list"></ol>
+  <ol id="all-stories-list" class="stories-list hidden"></ol>
 
 </section>
 
